logs/mobility/build.make.122.log.stderr
/home/steven/rover_workspace/src/mobility/src/mobility.cpp: In function ‘void doDropOffControllerMovements()’:
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:601:1: error: expected ‘;’ before ‘}’ token
 }//end switch
 ^
make[2]: *** [CMakeFiles/mobility.dir/src/mobility.cpp.o] Error 1
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
